--- a/client/styles.css
+++ b/client/styles.css
@@ -3,7 +3,9 @@ body {
   margin: 0;
   padding: 0;
   background-color: #f0f0f0;
-  background-image: linear-gradient(120deg, #f4dd91 0%, #f3af9c 100%);
+  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -35,6 +37,7 @@ p {
 .step-1 {
   display: flex;
   flex-direction: row;
+  margin-top: 24px;
 }
 
 .step-1 input {
@@ -134,6 +137,27 @@ form button:hover {
   text-align: center;
 }
 
+/* Footer */
+.footer {
+  position: fixed;
+  bottom: 16px;
+  width: 100%;
+  text-align: center;
+}
+
+.footer a {
+  color: #007bff;
+  text-decoration: none;
+}
+
+.footer a:hover {
+  color: #0056b3;
+}
+
+.footer p {
+  font-size: 14px;
+}
+
 /* Error Message */
 .error-message {
   color: red;
@@ -165,5 +189,17 @@ form button:hover {
   }
   100% {
     transform: rotate(360deg);
+  }
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
   }
 }
